--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/1-84529878.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carré d'As Tutorat</title>
   </head>
